# lawagent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: agent-verify.sh
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml
apps/agent/: main.py
apps/agent/src/: graph.py  prompts.py  tools.py
apps/api/: Dockerfile  __init__.py  admin.py  auth.py  files.py  main.py  projects.py  users.py
apps/ccsg1/: fill.py
apps/cli/: main.py
apps/efile/: main.py
apps/efile/src/: auth.py  case.py  download.py  throttle.py
apps/ingest/: main.py
apps/ingest/src/: courtlistener.py  fetch_public.py  official_ak.py  official_al.py  official_az.py  official_de.py  official_hi.py  official_ia.py  official_id.py  official_il.py  official_in.py  official_ks.py  official_ky.py  official_la.py  official_ma.py  official_md.py  official_me.py  official_mi.py  official_mn.py  official_mo.py  official_mt.py  official_nc.py  official_nd.py  official_ne.py  official_nh.py  official_nm.py  official_oh.py  official_ok.py  official_pa.py  official_ri.py  official_sc.py  official_sd.py  official_va.py  official_vt.py  official_wa.py  official_wi.py  official_wv.py  official_wy.py  public_law.py  public_law_flat.py  (+1 more)
apps/marketing/: README.md  ideas.md  plan.md  targets.md
apps/marketing/content/: demo-script.md  flagship-post.md  outreach-templates.md
apps/mobile/: .env.example  .gitignore  README.md  app.config.ts  babel.config.js  eslint.config.mjs  expo-env.d.ts  metro.config.js  package-lock.json  package.json
apps/mobile/app/: _layout.tsx  (+1 more)
apps/pdf2text/: main.py
apps/pipeline/: main.py
apps/s3fetch/: main.py
apps/syncd/: main.py  scheduler.py
apps/web/: .dockerignore  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
config/: pricing.yaml  profiles.yaml  states.yaml
docs/: README.md  architecture.md  corpus-format.md  data-flow.md  mvp-scope.md  open-questions.md  spike-plan.md  users.md  vision.md
infra/aws/: README.md
infra/launchd/: com.pborgen.lawagent.syncd.plist
infra/terraform/: .gitignore  README.md  apprunner.tf  cognito.tf  ecr.tf  guardrails.tf  iam_github_oidc.tf  network.tf  outputs.tf  rds.tf  terraform.tfvars.example  variables.tf  versions.tf  web.tf
tests/: test_api_admin.py  test_api_auth.py  test_api_files.py  test_api_projects.py  test_convert.py  test_embeddings.py  test_fetch_public.py  test_guardrails.py  test_ingestion_chunking.py  test_ingestion_pgvector.py  test_multistate.py  test_usage_tracking.py
(+67 files in other folders)
