[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawagent-monorepo"
version = "0.1.0"
description = "Trial-prep assistant for a pro se litigant in a Connecticut divorce. Initial focus: alimony (CGS 46b-82, 46b-83)."
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-postgres>=0.0.12",
    "langchain-voyageai>=0.1.4",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "python-dotenv>=1",
    "rich>=13",
    "playwright>=1.47",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.24",
    "pytesseract>=0.3.10",
    "pillow>=10",
]

# Discover every top-level package under apps/ and packages/. With this
# in place, `pip install -e .` (or `uv sync`) makes `agent`, `cli`,
# `ingest`, `corpus`, `ingestion`, `store`, and `llm` all importable.
[tool.setuptools.packages.find]
where = ["apps", "packages"]

[tool.pytest.ini_options]
pythonpath = ["apps", "packages"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
local = [
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
local = [
    "langchain-huggingface>=0.1",
    "sentence-transformers>=3.0",
]

[project.scripts]
lawagent = "cli.main:app"
